Bug 405136 - ark can not open .tar archives created with ark
Summary: ark can not open .tar archives created with ark
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: 18.12.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Elvis Angelaccio
URL:
Keywords:
: 405832 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-03-06 10:25 UTC by Mario Aichinger
Modified: 2019-04-26 10:24 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.03.80
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mario Aichinger 2019-03-06 10:25:31 UTC
ark can not open tar archives created with ark


STEPS TO REPRODUCE
1. Archive -> New
2. Select "Tar Archive" as Type
3. Drop a file into the archive
4. Quit Ark
5. run "ark <filename>.tar"

OBSERVED RESULT
Error:

   Loading the archive <path>/<filename>.tar failed with the following error:
   No suitable plugin found. Ark does not seem to support this file type.

Also /usr/bin/file does not recognizes the created file as tar archive (see ADDITIONAL INFORMATION)

EXPECTED RESULT

   Ark listing the one file dropped into the archive


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
KDE Plasma Version: 5.15.2
KDE Frameworks Version: 5.55.0
Qt Version: 5.12.1

ADDITIONAL INFORMATION

$ file <filename>.tar 
test1.tar: Zstandard compressed data (v0.8+), Dictionary ID: None

$ bsdtar -tf <filename>.tar
the_added_file.png

$ tar -tf <filename>.tar
tar: Ignoring unknown extended header keyword 'SCHILY.fflags'
the_added_file.png
Comment 1 Méven Car 2019-03-06 19:14:56 UTC
I Could not reproduce.

I got a regular tar file as output.

$ file test.tar 
test.tar: POSIX tar archive

I am surprised file command said it was a Zstandard archive.

It could be a regression since I use slightly older versions of KDE Frameworks and Qt.

OS : Kubuntu 18.10
KDE Plasma Version : 5.15.2
KDE Frameworks Version : 5.54.0
Qt Version : 5.11.1
Comment 2 Elvis Angelaccio 2019-03-09 12:09:06 UTC
Git commit a3bcf9becddd5725725089add15fbae39c79757e by Elvis Angelaccio.
Committed on 09/03/2019 at 12:05.
Pushed by elvisangelaccio into branch 'master'.

Fix creation of tar archives

Usage of QString::compare() breaks the creation of tar archives, because
`zst` is "bigger" than `tar` which means ark would use the `zstd` filter
even when creating a simple tar archive.
FIXED-IN: 19.03.80

M  +1    -1    plugins/libarchive/readwritelibarchiveplugin.cpp

https://commits.kde.org/ark/a3bcf9becddd5725725089add15fbae39c79757e
Comment 3 Elvis Angelaccio 2019-03-09 12:11:11 UTC
Thanks for reporting, unfortunately we missed the 18.12.3 release.

Please ask your distribution to backport this commit if you cannot wait for the 19.04 release.
Comment 4 Elvis Angelaccio 2019-03-24 20:29:11 UTC
*** Bug 405832 has been marked as a duplicate of this bug. ***
Comment 5 Patrick Silva 2019-03-30 14:37:55 UTC
I have Ark 19.03.80 on Ark Linux and the bug persists.
Comment 6 Patrick Silva 2019-03-30 14:40:22 UTC
Forget. I created a new tar file and now Ark works.
Comment 7 PastorDi 2019-04-26 10:24:25 UTC
Now the situation is regression. Previously, ZST parked in tar without compression is not Packed. Now the other way around. To tar without compression packaged, not packaged in zst.