Fix creation of tar archives

Usage of QString::compare() breaks the creation of tar archives, because
`zst` is "bigger" than `tar` which means ark would use the `zstd` filter
even when creating a simple tar archive.

BUG: 405136
FIXED-IN: 19.03.80